0.10.0 (currently working on)
- [#3987] Change: Require TYPO3 4.4
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4189] Fix: Replace double quotes in subject-field of cancel/confirm-form
- [#3905] Fix: Exception in the FE editor the first time after clearing the cache
- [#4294] Fix: Adapt all version number checks for 4.6
- [#4286] Fix: pi1_eventEditor accesses a private variable isTestMode instead of calling the function
- [#4280] Cleanup: Make true, false and null uppercase
- [#4269] Cleanup: Convert the XCLASS code to use $GLOBALS
- [#4177] Cleanup: Update the copyright to 2011
- [#4268] Cleanup: Drop the XCLASS code from abstract classes
- [#4233] Fix: The default value for price_regular_early is missing a decimal (thanks to Eric Chavaillaz)
- [#3988] Fix: Field in the registration TCE forms has no label
- [#3951] Feature: Add a hook for sending the confirmation e-mail (from the BE module)
- [#4210] Feature: Modernize the modifySingleView hook
- [#4104] Feature: Add a hook for modifying the time frame list rows in the single view
- [#4199] Feature: Add a separate flavor for the single view
- [#4198] Fix: The registrationManager cannot be XCLASSed
- [#3873] Feature: Modernize the modifyListView hook
- [#4191] Feature: Add EventModel::getRawTitle
- [#4045] Fix: Always use the display title of events
- [#4042] Fix: Table headings in mod2 are invisible (white on white) in TYPO3 4.4
- [#4170] Fix: tx_seminars_seminar::getOrganizerBag needs to sort the organizers by the relation sorting
- [#4169] Fix: Drop unused code and some unused variables
- [#4152] Feature: In the "my events" list, also list the events to which the logged-in FE user is an additional attendee
- [#4165] Cleanup: Change BagBuilder_Registration::limitToAttendee to expect an FE user model
- [#4159] Fix: In the notification e-mail to the organizers, add a LF before the field data if the field data contains a LF or CR