@@ -29,6 +29,7 @@
  * @subpackage tx_seminars
  *
  * @author Niels Pardon <mail@niels-pardon.de>
+ * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
 class tx_seminars_FrontEnd_WizardIcon {
 	/**
@@ -39,33 +40,37 @@ class tx_seminars_FrontEnd_WizardIcon {
 	 * @return array modified array with wizard items
 	 */
 	public function proc(array $wizardItems) {
-		global $LANG;
-
-		$LL = $this->includeLocalLang();
+		$localLanguage = $this->includeLocalLang();
 
 		$wizardItems['plugins_tx_seminars_pi1'] = array(
-			'icon' => t3lib_extMgm::extRelPath('seminars') .
-				'Resources/Public/Icons/ContentWizard.gif',
-			'title' => $LANG->getLLL('pi1_title', $LL),
-			'description' => $LANG->getLLL('pi1_description', $LL),
-			'params' => '&defVals[tt_content][CType]=list' .
-				'&defVals[tt_content][list_type]=seminars_pi1'
+			'icon' => t3lib_extMgm::extRelPath('seminars') . 'Resources/Public/Icons/ContentWizard.gif',
+			'title' => $GLOBALS['LANG']->getLLL('pi1_title', $localLanguage),
+			'description' => $GLOBALS['LANG']->getLLL('pi1_description', $localLanguage),
+			'params' => '&defVals[tt_content][CType]=list&defVals[tt_content][list_type]=seminars_pi1',
 		);
 
 		return $wizardItems;
 	}
 
 	/**
-	 * Reads the [extDir]/locallang.xml and returns the labels found in that
-	 * file as an array.
+	 * Reads the [extDir]/locallang.xml and returns the $LOCAL_LANG array found in that file.
 	 *
 	 * @return array the found language labels
 	 */
 	public function includeLocalLang() {
-		return t3lib_div::readLLXMLfile(
-			t3lib_extMgm::extPath('seminars') . 'locallang.xml',
-			$GLOBALS['LANG']->lang
-		);
+		if (class_exists('t3lib_l10n_parser_Llxml')) {
+			/** @var $xmlParser t3lib_l10n_parser_Llxml */
+			$xmlParser = t3lib_div::makeInstance('t3lib_l10n_parser_Llxml');
+			$localLanguage = $xmlParser->getParsedData(
+				t3lib_extMgm::extPath('seminars') . 'locallang.xml', $GLOBALS['LANG']->lang
+			);
+		} else {
+			$localLanguage = t3lib_div::readLLXMLfile(
+				t3lib_extMgm::extPath('seminars') . 'locallang.xml', $GLOBALS['LANG']->lang
+			);
+		}
+
+		return $localLanguage;
 	}
 }
 
